--- a/src/services/HospitalSignalR.API/HospitalSignalR.API.csproj
+++ b/src/services/HospitalSignalR.API/HospitalSignalR.API.csproj
@@ -11,4 +11,9 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\HospitalSignalR.Core\HospitalSignalR.Core.csproj" />
+      <ProjectReference Include="..\HospitalSignalR.Infraestructure\HospitalSignalR.Infraestructure.csproj" />
+    </ItemGroup>
+
 </Project>
