--- a/src/services/HospitalSignalR.Infraestructure/HospitalSignalR.Infraestructure.csproj
+++ b/src/services/HospitalSignalR.Infraestructure/HospitalSignalR.Infraestructure.csproj
@@ -6,4 +6,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\HospitalSignalR.Core\HospitalSignalR.Core.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.14" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.14" />
+    </ItemGroup>
+
 </Project>
